# const_power_of_two

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
src/: lib.rs
